--- a/sc.css
+++ b/sc.css
@@ -13,7 +13,7 @@ body {
     margin: 0 auto;
     margin-top: 15px;
 }
-
+/*-------------RESPONSIVIDADE----------------*/
 @media screen and (max-width: 1200px) {
 
     .tabela {
@@ -674,7 +674,7 @@ legend {
     border-radius: 10px;
     box-shadow: 1px 1px 6px #0000001c;
 }
-
+/*-----------INPUTS TYPE--------------*/
 input[type="radio"]{
     cursor: pointer;
 }
@@ -688,6 +688,7 @@ input[type="file"] {
     margin-top: 12px;
 }
 
+/*----------BOTÃO-----------------*/
 #salvar {
     background: #1b7dfd;
     color: white;
